--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>frist_portfolio</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
+    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3 class="nav_title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+ 
     </main>
     <footer>
-        
+
     </footer>    
 </body>
 </html>
