--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
-
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
@@ -141,6 +140,24 @@
         </section>
     </main>
     <footer>
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
 
     </footer>    
 </body>
